--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider:
   event_bus: ^1.1.0
   permission_handler: ^3.3.0
+  flutter_easyrefresh: ^2.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
