--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   fluttertoast: ^3.0.4
   # https://github.com/flutterchina/dio
   dio: ^2.1.3
-  oktoast: ^2.2.0
+  toast:
   flutter_spinkit: "^4.0.0"
   fluro: ^1.5.0
   extended_image: 0.5.5
@@ -38,6 +38,7 @@ dependencies:
   event_bus: ^1.1.0
   permission_handler: ^3.3.0
   flutter_easyrefresh: ^2.0.4
+  flutter_screenutil: ^0.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
