--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,8 @@ dependencies:
   toast:
   flutter_spinkit: "^4.0.0"
   fluro: ^1.5.0
-  extended_image: 0.5.5
-  cached_network_image: 1.1.1
   shared_preferences: 0.5.3+4
   provider:
-  event_bus: ^1.1.0
   permission_handler: ^3.3.0
   flutter_easyrefresh: ^2.0.4
   flutter_screenutil: ^0.5.1
@@ -59,6 +56,7 @@ flutter:
     - images/login_index_bg.png
     - images/icon_login_qq.png
     - images/icon_login_wechat.png
+    - images/icon_no_data.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
